--- a/appointments/index.html
+++ b/appointments/index.html
@@ -134,11 +134,21 @@
 					</svg>
 				</div>
 				<div class="controls__date-picker-calendar calendar">
-					<div class="calendar__month">
-						<span>January 2020</span>
-					</div>
-					<div class="calendar__controlls">
-
+					
+					<div class="calendar__controls-month">
+						<div class="calendar__control-month calendar__controll_left">
+							<svg viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path d="M6.22396 1L1.22742 6.07275L6.22396 11.1455" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"></path>
+							</svg>
+						</div>
+						<div class="calendar__month">
+							<span>January 2020</span>
+						</div>
+						<div class="calendar__control-month calendar__controll_rigth">
+							<svg viewBox="0 0 9 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<path d="M0.868389 11.1455L5.86493 6.07276L0.868388 1.00002" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"></path>
+							</svg>
+						</div>
 					</div>
 					<table class="calendar__table">
 						<tr class="calendar-table__row-week">
@@ -360,22 +370,22 @@
 					<th>
 						<div class="table__cell table__cell_headline">
 							<div class="table__wrapper-text">
+								<div class="table__filter-btn">
+									<svg width="13" height="18" viewBox="0 0 13 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<g clip-path="url(#clip0)">
+										<path d="M8.164 8.274H4.836C4.771 8.274 4.71467 8.232 4.67133 8.166L0.485334 1.074C0.372668 0.887998 0.472334 0.599998 0.650001 0.599998H12.3587C12.5363 0.599998 12.6317 0.887998 12.5233 1.074L8.333 8.166C8.28967 8.232 8.229 8.274 8.164 8.274Z" fill="white" stroke="#8391AD" stroke-width="1.4" stroke-miterlimit="10"/>
+										<path d="M8.164 14.418L5.11767 17.316C4.95734 17.466 4.73634 17.316 4.73634 17.052V8.59201C4.73634 8.41201 4.84467 8.26801 4.979 8.26801H8.02533C8.15967 8.26801 8.268 8.41201 8.268 8.59201V14.154C8.26367 14.256 8.229 14.358 8.164 14.418Z" fill="white" stroke="#8391AD" stroke-width="1.4" stroke-miterlimit="10"/>
+										</g>
+									</svg>		
+								</div>
 								<p class="table__text table__text_headline">
 									Type
 								</p>
-								<div class="table__sort-btn">
-									<svg viewBox="0 0 12 6" fill="none" xmlns="http://www.w3.org/2000/svg">
-										<path d="M1 1L6 5.28571L11 1" stroke-linecap="round" stroke-linejoin="round"></path>
-									</svg>
-								</div>
 							</div>
-							<div class="table__filter-btn">
-								<svg width="13" height="18" viewBox="0 0 13 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-									<g clip-path="url(#clip0)">
-									<path d="M8.164 8.274H4.836C4.771 8.274 4.71467 8.232 4.67133 8.166L0.485334 1.074C0.372668 0.887998 0.472334 0.599998 0.650001 0.599998H12.3587C12.5363 0.599998 12.6317 0.887998 12.5233 1.074L8.333 8.166C8.28967 8.232 8.229 8.274 8.164 8.274Z" fill="white" stroke="#8391AD" stroke-width="1.4" stroke-miterlimit="10"/>
-									<path d="M8.164 14.418L5.11767 17.316C4.95734 17.466 4.73634 17.316 4.73634 17.052V8.59201C4.73634 8.41201 4.84467 8.26801 4.979 8.26801H8.02533C8.15967 8.26801 8.268 8.41201 8.268 8.59201V14.154C8.26367 14.256 8.229 14.358 8.164 14.418Z" fill="white" stroke="#8391AD" stroke-width="1.4" stroke-miterlimit="10"/>
-									</g>
-								</svg>		
+							<div class="table__sort-btn">
+								<svg viewBox="0 0 12 6" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path d="M1 1L6 5.28571L11 1" stroke-linecap="round" stroke-linejoin="round"></path>
+								</svg>
 							</div>
 							<ul class="table__filter-list drop-list">
 								<li class="drop-list__item table__filter-item ">
@@ -407,22 +417,22 @@
 					<th>
 						<div class="table__cell table__cell_headline">
 							<div class="table__wrapper-text">
+								<div class="table__filter-btn">
+									<svg width="13" height="18" viewBox="0 0 13 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<g clip-path="url(#clip0)">
+										<path d="M8.164 8.274H4.836C4.771 8.274 4.71467 8.232 4.67133 8.166L0.485334 1.074C0.372668 0.887998 0.472334 0.599998 0.650001 0.599998H12.3587C12.5363 0.599998 12.6317 0.887998 12.5233 1.074L8.333 8.166C8.28967 8.232 8.229 8.274 8.164 8.274Z" fill="white" stroke="#8391AD" stroke-width="1.4" stroke-miterlimit="10"/>
+										<path d="M8.164 14.418L5.11767 17.316C4.95734 17.466 4.73634 17.316 4.73634 17.052V8.59201C4.73634 8.41201 4.84467 8.26801 4.979 8.26801H8.02533C8.15967 8.26801 8.268 8.41201 8.268 8.59201V14.154C8.26367 14.256 8.229 14.358 8.164 14.418Z" fill="white" stroke="#8391AD" stroke-width="1.4" stroke-miterlimit="10"/>
+										</g>
+									</svg>		
+								</div>
 								<p class="table__text table__text_headline">
 									Status
 								</p>
-								<div class="table__sort-btn">
-									<svg viewBox="0 0 12 6" fill="none" xmlns="http://www.w3.org/2000/svg">
-										<path d="M1 1L6 5.28571L11 1" stroke-linecap="round" stroke-linejoin="round"></path>
-									</svg>
-								</div>
 							</div>
-							<div class="table__filter-btn">
-								<svg width="13" height="18" viewBox="0 0 13 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-									<g clip-path="url(#clip0)">
-									<path d="M8.164 8.274H4.836C4.771 8.274 4.71467 8.232 4.67133 8.166L0.485334 1.074C0.372668 0.887998 0.472334 0.599998 0.650001 0.599998H12.3587C12.5363 0.599998 12.6317 0.887998 12.5233 1.074L8.333 8.166C8.28967 8.232 8.229 8.274 8.164 8.274Z" fill="white" stroke="#8391AD" stroke-width="1.4" stroke-miterlimit="10"/>
-									<path d="M8.164 14.418L5.11767 17.316C4.95734 17.466 4.73634 17.316 4.73634 17.052V8.59201C4.73634 8.41201 4.84467 8.26801 4.979 8.26801H8.02533C8.15967 8.26801 8.268 8.41201 8.268 8.59201V14.154C8.26367 14.256 8.229 14.358 8.164 14.418Z" fill="white" stroke="#8391AD" stroke-width="1.4" stroke-miterlimit="10"/>
-									</g>
-								</svg>		
+							<div class="table__sort-btn">
+								<svg viewBox="0 0 12 6" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path d="M1 1L6 5.28571L11 1" stroke-linecap="round" stroke-linejoin="round"></path>
+								</svg>
 							</div>
 							<ul class="table__filter-list drop-list">
 								<li class="drop-list__item table__filter-item ">
@@ -454,22 +464,22 @@
 					<th>
 						<div class="table__cell table__cell_headline">
 							<div class="table__wrapper-text">
+								<div class="table__filter-btn">
+									<svg width="13" height="18" viewBox="0 0 13 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<g clip-path="url(#clip0)">
+										<path d="M8.164 8.274H4.836C4.771 8.274 4.71467 8.232 4.67133 8.166L0.485334 1.074C0.372668 0.887998 0.472334 0.599998 0.650001 0.599998H12.3587C12.5363 0.599998 12.6317 0.887998 12.5233 1.074L8.333 8.166C8.28967 8.232 8.229 8.274 8.164 8.274Z" fill="white" stroke="#8391AD" stroke-width="1.4" stroke-miterlimit="10"/>
+										<path d="M8.164 14.418L5.11767 17.316C4.95734 17.466 4.73634 17.316 4.73634 17.052V8.59201C4.73634 8.41201 4.84467 8.26801 4.979 8.26801H8.02533C8.15967 8.26801 8.268 8.41201 8.268 8.59201V14.154C8.26367 14.256 8.229 14.358 8.164 14.418Z" fill="white" stroke="#8391AD" stroke-width="1.4" stroke-miterlimit="10"/>
+										</g>
+									</svg>		
+								</div>
 								<p class="table__text table__text_headline">
 									Property type
 								</p>
-								<div class="table__sort-btn">
-									<svg viewBox="0 0 12 6" fill="none" xmlns="http://www.w3.org/2000/svg">
-										<path d="M1 1L6 5.28571L11 1" stroke-linecap="round" stroke-linejoin="round"></path>
-									</svg>
-								</div>
 							</div>
-							<div class="table__filter-btn">
-								<svg width="13" height="18" viewBox="0 0 13 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-									<g clip-path="url(#clip0)">
-									<path d="M8.164 8.274H4.836C4.771 8.274 4.71467 8.232 4.67133 8.166L0.485334 1.074C0.372668 0.887998 0.472334 0.599998 0.650001 0.599998H12.3587C12.5363 0.599998 12.6317 0.887998 12.5233 1.074L8.333 8.166C8.28967 8.232 8.229 8.274 8.164 8.274Z" fill="white" stroke="#8391AD" stroke-width="1.4" stroke-miterlimit="10"/>
-									<path d="M8.164 14.418L5.11767 17.316C4.95734 17.466 4.73634 17.316 4.73634 17.052V8.59201C4.73634 8.41201 4.84467 8.26801 4.979 8.26801H8.02533C8.15967 8.26801 8.268 8.41201 8.268 8.59201V14.154C8.26367 14.256 8.229 14.358 8.164 14.418Z" fill="white" stroke="#8391AD" stroke-width="1.4" stroke-miterlimit="10"/>
-									</g>
-								</svg>		
+							<div class="table__sort-btn">
+								<svg viewBox="0 0 12 6" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path d="M1 1L6 5.28571L11 1" stroke-linecap="round" stroke-linejoin="round"></path>
+								</svg>
 							</div>
 							<ul class="table__filter-list drop-list">
 								<li class="drop-list__item table__filter-item ">
@@ -501,22 +511,23 @@
 					<th>
 						<div class="table__cell table__cell_headline">
 							<div class="table__wrapper-text">
+								
+								<div class="table__filter-btn">
+									<svg width="13" height="18" viewBox="0 0 13 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<g clip-path="url(#clip0)">
+										<path d="M8.164 8.274H4.836C4.771 8.274 4.71467 8.232 4.67133 8.166L0.485334 1.074C0.372668 0.887998 0.472334 0.599998 0.650001 0.599998H12.3587C12.5363 0.599998 12.6317 0.887998 12.5233 1.074L8.333 8.166C8.28967 8.232 8.229 8.274 8.164 8.274Z" fill="white" stroke="#8391AD" stroke-width="1.4" stroke-miterlimit="10"/>
+										<path d="M8.164 14.418L5.11767 17.316C4.95734 17.466 4.73634 17.316 4.73634 17.052V8.59201C4.73634 8.41201 4.84467 8.26801 4.979 8.26801H8.02533C8.15967 8.26801 8.268 8.41201 8.268 8.59201V14.154C8.26367 14.256 8.229 14.358 8.164 14.418Z" fill="white" stroke="#8391AD" stroke-width="1.4" stroke-miterlimit="10"/>
+										</g>
+									</svg>		
+								</div>
 								<p class="table__text table__text_headline">
 									Area
 								</p>
-								<div class="table__sort-btn">
-									<svg viewBox="0 0 12 6" fill="none" xmlns="http://www.w3.org/2000/svg">
-										<path d="M1 1L6 5.28571L11 1" stroke-linecap="round" stroke-linejoin="round"></path>
-									</svg>
-								</div>
 							</div>
-							<div class="table__filter-btn">
-								<svg width="13" height="18" viewBox="0 0 13 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-									<g clip-path="url(#clip0)">
-									<path d="M8.164 8.274H4.836C4.771 8.274 4.71467 8.232 4.67133 8.166L0.485334 1.074C0.372668 0.887998 0.472334 0.599998 0.650001 0.599998H12.3587C12.5363 0.599998 12.6317 0.887998 12.5233 1.074L8.333 8.166C8.28967 8.232 8.229 8.274 8.164 8.274Z" fill="white" stroke="#8391AD" stroke-width="1.4" stroke-miterlimit="10"/>
-									<path d="M8.164 14.418L5.11767 17.316C4.95734 17.466 4.73634 17.316 4.73634 17.052V8.59201C4.73634 8.41201 4.84467 8.26801 4.979 8.26801H8.02533C8.15967 8.26801 8.268 8.41201 8.268 8.59201V14.154C8.26367 14.256 8.229 14.358 8.164 14.418Z" fill="white" stroke="#8391AD" stroke-width="1.4" stroke-miterlimit="10"/>
-									</g>
-								</svg>		
+							<div class="table__sort-btn">
+								<svg viewBox="0 0 12 6" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path d="M1 1L6 5.28571L11 1" stroke-linecap="round" stroke-linejoin="round"></path>
+								</svg>
 							</div>
 							<ul class="table__filter-list drop-list">
 								<li class="drop-list__item table__filter-item ">
@@ -548,22 +559,22 @@
 					<th>
 						<div class="table__cell table__cell_headline">
 							<div class="table__wrapper-text">
+								<div class="table__filter-btn">
+									<svg width="13" height="18" viewBox="0 0 13 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<g clip-path="url(#clip0)">
+										<path d="M8.164 8.274H4.836C4.771 8.274 4.71467 8.232 4.67133 8.166L0.485334 1.074C0.372668 0.887998 0.472334 0.599998 0.650001 0.599998H12.3587C12.5363 0.599998 12.6317 0.887998 12.5233 1.074L8.333 8.166C8.28967 8.232 8.229 8.274 8.164 8.274Z" fill="white" stroke="#8391AD" stroke-width="1.4" stroke-miterlimit="10"/>
+										<path d="M8.164 14.418L5.11767 17.316C4.95734 17.466 4.73634 17.316 4.73634 17.052V8.59201C4.73634 8.41201 4.84467 8.26801 4.979 8.26801H8.02533C8.15967 8.26801 8.268 8.41201 8.268 8.59201V14.154C8.26367 14.256 8.229 14.358 8.164 14.418Z" fill="white" stroke="#8391AD" stroke-width="1.4" stroke-miterlimit="10"/>
+										</g>
+									</svg>		
+								</div>
 								<p class="table__text table__text_headline">
 									Created by
 								</p>
-								<div class="table__sort-btn">
-									<svg viewBox="0 0 12 6" fill="none" xmlns="http://www.w3.org/2000/svg">
-										<path d="M1 1L6 5.28571L11 1" stroke-linecap="round" stroke-linejoin="round"></path>
-									</svg>
-								</div>
 							</div>
-							<div class="table__filter-btn">
-								<svg width="13" height="18" viewBox="0 0 13 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-									<g clip-path="url(#clip0)">
-									<path d="M8.164 8.274H4.836C4.771 8.274 4.71467 8.232 4.67133 8.166L0.485334 1.074C0.372668 0.887998 0.472334 0.599998 0.650001 0.599998H12.3587C12.5363 0.599998 12.6317 0.887998 12.5233 1.074L8.333 8.166C8.28967 8.232 8.229 8.274 8.164 8.274Z" fill="white" stroke="#8391AD" stroke-width="1.4" stroke-miterlimit="10"/>
-									<path d="M8.164 14.418L5.11767 17.316C4.95734 17.466 4.73634 17.316 4.73634 17.052V8.59201C4.73634 8.41201 4.84467 8.26801 4.979 8.26801H8.02533C8.15967 8.26801 8.268 8.41201 8.268 8.59201V14.154C8.26367 14.256 8.229 14.358 8.164 14.418Z" fill="white" stroke="#8391AD" stroke-width="1.4" stroke-miterlimit="10"/>
-									</g>
-								</svg>		
+							<div class="table__sort-btn">
+								<svg viewBox="0 0 12 6" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path d="M1 1L6 5.28571L11 1" stroke-linecap="round" stroke-linejoin="round"></path>
+								</svg>
 							</div>
 							<ul class="table__filter-list drop-list">
 								<li class="drop-list__item table__filter-item ">
@@ -607,22 +618,22 @@
 					<th>
 						<div class="table__cell table__cell_headline">
 							<div class="table__wrapper-text">
+								<div class="table__filter-btn">
+									<svg width="13" height="18" viewBox="0 0 13 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<g clip-path="url(#clip0)">
+										<path d="M8.164 8.274H4.836C4.771 8.274 4.71467 8.232 4.67133 8.166L0.485334 1.074C0.372668 0.887998 0.472334 0.599998 0.650001 0.599998H12.3587C12.5363 0.599998 12.6317 0.887998 12.5233 1.074L8.333 8.166C8.28967 8.232 8.229 8.274 8.164 8.274Z" fill="white" stroke="#8391AD" stroke-width="1.4" stroke-miterlimit="10"/>
+										<path d="M8.164 14.418L5.11767 17.316C4.95734 17.466 4.73634 17.316 4.73634 17.052V8.59201C4.73634 8.41201 4.84467 8.26801 4.979 8.26801H8.02533C8.15967 8.26801 8.268 8.41201 8.268 8.59201V14.154C8.26367 14.256 8.229 14.358 8.164 14.418Z" fill="white" stroke="#8391AD" stroke-width="1.4" stroke-miterlimit="10"/>
+										</g>
+									</svg>		
+								</div>
 								<p class="table__text table__text_headline">
 									Service Resource
 								</p>
-								<div class="table__sort-btn">
-									<svg viewBox="0 0 12 6" fill="none" xmlns="http://www.w3.org/2000/svg">
-										<path d="M1 1L6 5.28571L11 1" stroke-linecap="round" stroke-linejoin="round"></path>
-									</svg>
-								</div>
 							</div>
-							<div class="table__filter-btn">
-								<svg width="13" height="18" viewBox="0 0 13 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-									<g clip-path="url(#clip0)">
-									<path d="M8.164 8.274H4.836C4.771 8.274 4.71467 8.232 4.67133 8.166L0.485334 1.074C0.372668 0.887998 0.472334 0.599998 0.650001 0.599998H12.3587C12.5363 0.599998 12.6317 0.887998 12.5233 1.074L8.333 8.166C8.28967 8.232 8.229 8.274 8.164 8.274Z" fill="white" stroke="#8391AD" stroke-width="1.4" stroke-miterlimit="10"/>
-									<path d="M8.164 14.418L5.11767 17.316C4.95734 17.466 4.73634 17.316 4.73634 17.052V8.59201C4.73634 8.41201 4.84467 8.26801 4.979 8.26801H8.02533C8.15967 8.26801 8.268 8.41201 8.268 8.59201V14.154C8.26367 14.256 8.229 14.358 8.164 14.418Z" fill="white" stroke="#8391AD" stroke-width="1.4" stroke-miterlimit="10"/>
-									</g>
-								</svg>		
+							<div class="table__sort-btn">
+								<svg viewBox="0 0 12 6" fill="none" xmlns="http://www.w3.org/2000/svg">
+									<path d="M1 1L6 5.28571L11 1" stroke-linecap="round" stroke-linejoin="round"></path>
+								</svg>
 							</div>
 							<ul class="table__filter-list drop-list">
 								<li class="drop-list__item table__filter-item ">
@@ -665,35 +676,36 @@
 					</th>
 				</tr>
 				<tr>
-					<td class="table__cell table__cell_date">
-						<p class="table__text">06/25/2019 2:12 pm</p>
-					</td>
-					<td class="table__cell table__cell_name">
-						<p class="table__text">2675NSM-A-01</p>
-					</td>
-					<td class="table__cell table__cell_type table__cell_type_service">
-						<p class="table__text">Service call</p>
-					</td>
-					<td class="table__cell table__cell_status">
-						<p class="table__text">Done</p>
-					</td>
-					<td class="table__cell table__cell_property-type">
-						<p class="table__text">Residental</p>
-					</td>
-					<td class="table__cell table__cell_area">
-						<p class="table__text">JAX_FL</p>
-					</td>
-					<td class="table__cell table__cell_created-by">
-						<p class="table__text"></p>
-					</td>
-					<td class="table__cell table__cell_shedule-time">
-						<p class="table__text">06/25/2019
-								(4:00pm-6:00pm)
-								</p>
-					</td>
-					<td class="table__cell table__cell_service-resource">
-						<p class="table__text">Andriy</p>
-					</td>
+
+						<td class="table__cell table__cell_date">
+							<p class="table__text">06/25/2019 2:12 pm</p>
+						</td>
+						<td class="table__cell table__cell_name">
+							<p class="table__text">2675NSM-A-01</p>
+						</td>
+						<td class="table__cell table__cell_type table__cell_type_service">
+							<p class="table__text">Service call</p>
+						</td>
+						<td class="table__cell table__cell_status">
+							<p class="table__text">Done</p>
+						</td>
+						<td class="table__cell table__cell_property-type">
+							<p class="table__text">Residental</p>
+						</td>
+						<td class="table__cell table__cell_area">
+							<p class="table__text">JAX_FL</p>
+						</td>
+						<td class="table__cell table__cell_created-by">
+							<p class="table__text"></p>
+						</td>
+						<td class="table__cell table__cell_shedule-time">
+							<p class="table__text">06/25/2019
+									(4:00pm-6:00pm)
+									</p>
+						</td>
+						<td class="table__cell table__cell_service-resource">
+							<p class="table__text">Andriy</p>
+						</td>
 					<td class="table__cell table__cell_share">
 						<div class="table__share-btn table__share-btn_active">
 							<svg width="20" height="21" viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg">
