--- a/appointments/index.html
+++ b/appointments/index.html
@@ -390,7 +390,7 @@
 							<ul class="table__filter-list drop-list">
 								<li class="drop-list__item table__filter-item ">
 									<label class="filter-item">All
-										<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox">
+										<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox" checked>
 										<span class="filter-item__checkmark"></span>
 									</label>	 
 								</li>
@@ -437,7 +437,7 @@
 							<ul class="table__filter-list drop-list">
 								<li class="drop-list__item table__filter-item ">
 									<label class="filter-item">All
-										<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox">
+										<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox" checked>
 										<span class="filter-item__checkmark"></span>
 									</label>	 
 								</li>
@@ -484,7 +484,7 @@
 							<ul class="table__filter-list drop-list">
 								<li class="drop-list__item table__filter-item ">
 									<label class="filter-item">All
-										<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox">
+										<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox" checked>
 										<span class="filter-item__checkmark"></span>
 									</label>	 
 								</li>
@@ -532,7 +532,7 @@
 							<ul class="table__filter-list drop-list">
 								<li class="drop-list__item table__filter-item ">
 									<label class="filter-item">All
-										<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox">
+										<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox" checked>
 										<span class="filter-item__checkmark"></span>
 									</label>	 
 								</li>
@@ -579,7 +579,7 @@
 							<ul class="table__filter-list drop-list">
 								<li class="drop-list__item table__filter-item ">
 									<label class="filter-item">All
-										<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox">
+										<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox" checked>
 										<span class="filter-item__checkmark"></span>
 									</label>	 
 								</li>
@@ -638,7 +638,7 @@
 							<ul class="table__filter-list drop-list">
 								<li class="drop-list__item table__filter-item ">
 									<label class="filter-item">All
-										<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox">
+										<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox" checked>
 										<span class="filter-item__checkmark"></span>
 									</label>	 
 								</li>
