--- a/appointments/index.html
+++ b/appointments/index.html
@@ -92,9 +92,9 @@
 								
 					</div>
 					<ul class="controls__date-period-list date-period-list drop-list">
-						<li class="drop-list__item date-period-list__item selected">Tomorrow</li>
-						<li class="drop-list__item date-period-list__item">Tomorrow & Next</li>
 						<li class="drop-list__item date-period-list__item">Custom</li>
+						<li class="drop-list__item date-period-list__item">Tomorrow & Next</li>
+						<li class="drop-list__item date-period-list__item selected">Tomorrow</li>
 						<li class="drop-list__item date-period-list__item">Today</li>
 						<li class="drop-list__item date-period-list__item">Yesterday</li>
 						<li class="drop-list__item date-period-list__item">This week (Sun - today)</li>
@@ -398,7 +398,7 @@
 							<ul class="table__filter-list drop-list">
 								<li class="drop-list__item table__filter-item ">
 									<label class="filter-item">All
-										<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox">
+										<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox" checked>
 										<span class="filter-item__checkmark"></span>
 									</label>	 
 								</li>
@@ -445,7 +445,7 @@
 							<ul class="table__filter-list drop-list">
 								<li class="drop-list__item table__filter-item ">
 									<label class="filter-item">All
-										<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox">
+										<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox" checked>
 										<span class="filter-item__checkmark"></span>
 									</label>	 
 								</li>
@@ -492,7 +492,7 @@
 							<ul class="table__filter-list drop-list">
 								<li class="drop-list__item table__filter-item ">
 									<label class="filter-item">All
-										<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox">
+										<input class="filter-item__checkbox filter-item__checkbox_all" type="checkbox" checked>
 										<span class="filter-item__checkmark"></span>
 									</label>	 
 								</li>
