--- a/appointments/index.html
+++ b/appointments/index.html
@@ -92,9 +92,9 @@
 								
 					</div>
 					<ul class="controls__date-period-list date-period-list drop-list">
-						<li class="drop-list__item date-period-list__item">Custom</li>
+						<li class="drop-list__item date-period-list__item selected">Custom</li>
 						<li class="drop-list__item date-period-list__item">Tomorrow & Next</li>
-						<li class="drop-list__item date-period-list__item selected">Tomorrow</li>
+						<li class="drop-list__item date-period-list__item">Tomorrow</li>
 						<li class="drop-list__item date-period-list__item">Today</li>
 						<li class="drop-list__item date-period-list__item">Yesterday</li>
 						<li class="drop-list__item date-period-list__item">This week (Sun - today)</li>
