--- a/appointments/index.html
+++ b/appointments/index.html
@@ -93,21 +93,21 @@
 					</div>
 					<ul class="controls__date-period-list date-period-list drop-list">
 						<li class="drop-list__item date-period-list__item selected">Custom</li>
-						<li class="drop-list__item date-period-list__item">Tomorrow & Next</li>
-						<li class="drop-list__item date-period-list__item">Tomorrow</li>
-						<li class="drop-list__item date-period-list__item">Today</li>
-						<li class="drop-list__item date-period-list__item">Yesterday</li>
-						<li class="drop-list__item date-period-list__item">This week (Sun - today)</li>
-						<li class="drop-list__item date-period-list__item">This week (Mon - today)</li>
-						<li class="drop-list__item date-period-list__item">Last 7 days</li>
-						<li class="drop-list__item date-period-list__item">Last week (Sun - Sat)</li>
-						<li class="drop-list__item date-period-list__item">Last week (Mon - Sun)</li>
-						<li class="drop-list__item date-period-list__item">Last business week (Mon - Fri)</li>
-						<li class="drop-list__item date-period-list__item">Last 14 days</li>
-						<li class="drop-list__item date-period-list__item">Last 30 days</li>
-						<li class="drop-list__item date-period-list__item">This month</li>
-						<li class="drop-list__item date-period-list__item">Last month</li>
-						<li class="drop-list__item date-period-list__item">All</li>
+						<li class="drop-list__item date-period-list__item drop-list__item date-period-list__item_tomorrow-next">Tomorrow & Next</li>
+						<li class="drop-list__item date-period-list__item drop-list__item date-period-list__item_tomorrow">Tomorrow</li>
+						<li class="drop-list__item date-period-list__item drop-list__item date-period-list__item_today">Today</li>
+						<li class="drop-list__item date-period-list__item drop-list__item date-period-list__item_yesterday">Yesterday</li>
+						<li class="drop-list__item date-period-list__item drop-list__item date-period-list__item_week-sun">This week (Sun - today)</li>
+						<li class="drop-list__item date-period-list__item drop-list__item date-period-list__item_week-mon">This week (Mon - today)</li>
+						<li class="drop-list__item date-period-list__item drop-list__item date-period-list__item_last-7-days">Last 7 days</li>
+						<li class="drop-list__item date-period-list__item drop-list__item date-period-list__item_last-week-sun">Last week (Sun - Sat)</li>
+						<li class="drop-list__item date-period-list__item drop-list__item date-period-list__item_las-week-mon">Last week (Mon - Sun)</li>
+						<li class="drop-list__item date-period-list__item drop-list__item date-period-list__item_last-week-mon-fr">Last business week (Mon - Fri)</li>
+						<li class="drop-list__item date-period-list__item drop-list__item date-period-list__item_last-14-days">Last 14 days</li>
+						<li class="drop-list__item date-period-list__item drop-list__item date-period-list__item_last-30-days">Last 30 days</li>
+						<li class="drop-list__item date-period-list__item drop-list__item date-period-list__item_month">This month</li>
+						<li class="drop-list__item date-period-list__item drop-list__item date-period-list__item_last-month">Last month</li>
+						<li class="drop-list__item date-period-list__item drop-list__item date-period-list__item_all">All</li>
 					</ul>
 				</div>
 			</div>
@@ -144,7 +144,7 @@
 						
 						</p>
 						<div class="calendar__control-month calendar__controll_next">
-							<svg viewBox="0 0 9 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<svg viewBox="0 0 8 12" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<path d="M0.868389 11.1455L5.86493 6.07276L0.868388 1.00002" stroke-width="1.6" stroke-linecap="round" stroke-linejoin="round"></path>
 							</svg>
 						</div>
@@ -684,37 +684,78 @@
 					</th>
 				</tr>
 				<tr class="table__row-content">
-					<td class="table__cell table__cell_date table__cell-content">
+					<td class="table__cell table__cell_date table__cell_content">
 						<p class="table__text">06/25/2019 2:12 pm</p>
 					</td>
-					<td class="table__cell table__cell_name table__cell-content">
+					<td class="table__cell table__cell_name table__cell_content">
 						<p class="table__text">2675NSM-A-01</p>
 					</td>
-					<td class="table__cell table__cell_type table__cell_type_service table__cell-content">
+					<td class="table__cell table__cell_type table__cell_type_service table__cell_content">
 						<p class="table__text">Service call</p>
 					</td>
-					<td class="table__cell table__cell_status table__cell-content">
+					<td class="table__cell table__cell_status table__cell_content">
 						<p class="table__text">Done</p>
 					</td>
-					<td class="table__cell table__cell_property-type table__cell-content">
+					<td class="table__cell table__cell_property-type table__cell_content">
 						<p class="table__text">Residental</p>
 					</td>
-					<td class="table__cell table__cell_area table__cell-content">
+					<td class="table__cell table__cell_area table__cell_content">
 						<p class="table__text">JAX_FL</p>
 					</td>
-					<td class="table__cell table__cell_created-by table__cell-content">
+					<td class="table__cell table__cell_created-by table__cell_content">
 						<p class="table__text"></p>
 					</td>
-					<td class="table__cell table__cell_shedule-time table__cell-content">
+					<td class="table__cell table__cell_shedule-time table__cell_content">
 						<p class="table__text">06/25/2019
 								(4:00pm-6:00pm)
 								</p>
 					</td>
-					<td class="table__cell table__cell_service-resource table__cell-content">
+					<td class="table__cell table__cell_service-resource table__cell_content">
 						<p class="table__text">Andriy</p>
 					</td>
-					<td class="table__cell table__cell_share table__cell-share">
-						<div class="table__share-btn table__share-btn_active">
+					<td class="table__cell table__cell_share table__cell_share_active">
+						<div class="table__share-btn">
+							<svg width="20" height="21" viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg">
+								<g clip-path="url(#clip0)">
+								<path d="M13.6666 13.6041V2.9654C13.6666 2.70445 13.98 2.57732 14.16 2.75798L19.46 8.07732C19.5733 8.19107 19.5733 8.37841 19.46 8.49216L14.16 13.8115C13.98 13.9922 13.6666 13.865 13.6666 13.6041Z" fill="#8391AD" stroke="#8391AD" stroke-miterlimit="10"/>
+								<path d="M13.6666 10.4259C13.5599 10.5195 13.5133 10.5597 13.4066 10.6534C8.47995 10.1248 6.73995 10.6667 5.66661 11.7641C4.05995 13.3967 3.74661 16.2604 3.67995 17.351C3.67328 17.4246 3.57328 17.4313 3.55328 17.3644L2.74661 14.2866C2.49995 13.3364 2.39328 12.3462 2.53995 11.376C2.65995 10.553 2.92661 9.75676 3.35328 9.04082C4.04661 7.87659 5.01995 7.00676 6.27995 6.41795C7.30661 5.94289 8.43995 5.74886 9.57328 5.74886H13.6666V10.4259Z" fill="#8391AD" stroke="#8391AD" stroke-miterlimit="10"/>
+								</g>
+							</svg>
+						</div>
+					</td>
+				</tr>
+				<tr class="table__row-content">
+					<td class="table__cell table__cell_date table__cell_content">
+						<p class="table__text">06/25/2019 2:12 pm</p>
+					</td>
+					<td class="table__cell table__cell_name table__cell_content">
+						<p class="table__text">2675NSM-A-01</p>
+					</td>
+					<td class="table__cell table__cell_type table__cell_type_service table__cell_content">
+						<p class="table__text">Service call</p>
+					</td>
+					<td class="table__cell table__cell_status table__cell_content">
+						<p class="table__text">Done</p>
+					</td>
+					<td class="table__cell table__cell_property-type table__cell_content">
+						<p class="table__text">Residental</p>
+					</td>
+					<td class="table__cell table__cell_area table__cell_content">
+						<p class="table__text">JAX_FL</p>
+					</td>
+					<td class="table__cell table__cell_created-by table__cell_content">
+						<p class="table__text"></p>
+					</td>
+					<td class="table__cell table__cell_shedule-time table__cell_content">
+						<p class="table__text">06/25/2019
+								(4:00pm-6:00pm)
+								</p>
+					</td>
+					<td class="table__cell table__cell_service-resource table__cell_content">
+						<p class="table__text">Andriy</p>
+					</td>
+					<td class="table__cell table__cell_share table__cell_share_inactive">
+						<div class="table__share-btn">
 							<svg width="20" height="21" viewBox="0 0 20 21" fill="none" xmlns="http://www.w3.org/2000/svg">
 								<g clip-path="url(#clip0)">
 								<path d="M13.6666 13.6041V2.9654C13.6666 2.70445 13.98 2.57732 14.16 2.75798L19.46 8.07732C19.5733 8.19107 19.5733 8.37841 19.46 8.49216L14.16 13.8115C13.98 13.9922 13.6666 13.865 13.6666 13.6041Z" fill="#8391AD" stroke="#8391AD" stroke-miterlimit="10"/>
