--- a/appointments/index.html
+++ b/appointments/index.html
@@ -771,7 +771,7 @@
 					<td class="table__cell table__cell_name table__cell_content">
 						<p class="table__text">2675NSM-A-01</p>
 					</td>
-					<td class="table__cell table__cell_type table__cell_type_follow table__cell_content">
+					<td class="table__cell table__cell_type table__cel_type_follow table__cell_content">
 						<p class="table__text">Recall</p>
 					</td>
 					<td class="table__cell table__cell_status table__cell_content">
